--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ version = "0.0.1"
 requires-python = ">= 3.10"
 dependencies = [
   "pybloomer>=0.0.1",
+  "numpy>=1.19.5",
+  "nptyping>=2.5.0",
 ]
 authors = [
   {name = "Andrew DalPino", email = "support@andrewdalpino.com"},
@@ -15,6 +17,10 @@ authors = [
 description = "A specialized datastructure for counting short DNA sequences for use in Bioinformatics."
 readme = "README.md"
 license = {text = "MIT"}
+
+[project.optional-dependencies]
+dev = ["mypy"]
+test = ["mypy"]
 
 [project.urls]
 Homepage = "https://github.com/andrewdalpino/DNAHash"
