--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ readme = "README.md"
 license = {text = "MIT"}
 
 [project.optional-dependencies]
-dev = ["mypy"]
+dev = ["mypy", "biopython", "matplotlib", "PyQt6"]
 test = ["mypy"]
 
 [project.urls]
