--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "A specialized datastructure for counting short DNA sequences for 
 version = "0.0.1"
 requires-python = ">= 3.10"
 dependencies = [
-  "pybloomer>=0.0.1",
+  "okbloomer>=0.0.1",
   "numpy>=1.19.5",
   "nptyping>=2.5.0",
 ]
