--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "DNAHash"
-description = "A datastructure and tokenization library for counting short DNA sequences for use in Bioinformatics."
+description = "A specialized datastructure and tokenization library for counting short DNA sequences for use in Bioinformatics."
 version = "0.0.1"
 requires-python = ">= 3.10"
 dependencies = [
