--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "DNAHash"
-description = "A specialized datastructure and tokenization library for counting short DNA sequences for use in Bioinformatics."
+description = "A specialized datastructure and tokenization library for counting DNA sequences for use in Bioinformatics."
 version = "0.0.1"
 requires-python = ">= 3.10"
 dependencies = [
   "okbloomer>=0.0.3",
-  "numpy>=1.19.5",
-  "nptyping>=2.5.0",
 ]
 authors = [
   {name = "Andrew DalPino", email = "support@andrewdalpino.com"},
@@ -19,7 +17,7 @@ readme = "README.md"
 license = {text = "MIT"}
 
 [project.optional-dependencies]
-dev = ["mypy", "biopython", "matplotlib", "PyQt6"]
+dev = ["mypy", "biopython", "matplotlib"]
 test = ["mypy"]
 
 [project.urls]
