--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "DNAHash"
-description = "A specialized datastructure and tokenization library for counting genetic sequences for use in Bioinformatics."
-version = "0.0.2"
+description = "A specialized datastructure and tokenization library for counting genetic sequences for use in Machine Learning and Bioinformatics."
+version = "0.0.3"
 requires-python = ">= 3.10"
 dependencies = [
   "okbloomer>=0.0.3",
